@@ -8,6 +8,7 @@ Changelog
  * Reorganised Dockerfile in project template to follow best practices (Tomasz Knapik, Jannik Wempe)
  * Added filtering to locked pages report (Karl Hobley)
  * Adds ability to view a group's users via standalone admin URL and a link to this on the group edit view (Karran Besen)
+ * Redirect to previous url when deleting/copying/unpublish a page and modify this url via the relevant hooks (Ascani Carlo)
  * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
 
 
